--- a/src/style.css
+++ b/src/style.css
@@ -580,6 +580,22 @@ body.cursor-down .cursor {
     /* Center everything */
     width: 100%;
     margin-top: 5vh;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    /* Essential for 3D tilt */
+}
+
+.glare {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    opacity: 0;
+    z-index: 10;
+    mix-blend-mode: overlay;
+    will-change: opacity, background;
 }
 
 /* Separator Line between Title and Data */
