--- a/src/style.css
+++ b/src/style.css
@@ -612,7 +612,7 @@ body.cursor-down .cursor {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/assets/controller.svg');
+    background-image: url('/assets/controller.jpg');
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
