--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,18 @@
     --accent-color: #4ade80;
     /* Switched to Terminal Green to match Loader */
 
-    --font-heading: 'Neofolia', sans-serif;
-    --font-body: 'Neofolia', sans-serif;
-    /* Neofolia font */
+    /* Neofolia font - local */
+    @font-face {
+        font-family: 'Neofolia';
+        src: url('/fonts/neofolia.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+
+    --font-heading: 'Neofolia',
+    sans-serif;
+    --font-body: 'Neofolia',
+    sans-serif;
 
     --easing: cubic-bezier(0.19, 1, 0.22, 1);
     --panel: rgba(255, 255, 255, 0.06);
@@ -50,9 +59,6 @@ html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
-/* Neofolia font - from CDNFonts */
-@import url('https://fonts.cdnfonts.com/css/neofolia');
 
 /* Font weights and styling */
 .gp-title {
